err/v7py.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PySmbClient-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/olefile'...
Listing './lib/python3.5/site-packages/olefile-0.44.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyodbc-4.0.21.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/v7'...
Compiling './lib/python3.5/site-packages/v7/base.py'...
***   File "./lib/python3.5/site-packages/v7/base.py", line 126
    print cur.fetchall()
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/v7/db'...
Compiling './lib/python3.5/site-packages/v7/dds_parser.py'...
***   File "./lib/python3.5/site-packages/v7/dds_parser.py", line 171
    for m in re.finditer(ur'\{([a-zа-я0-9\.^ ]+)\}|\$([a-zа-я0-9\.^ ]+)', sqltext, re.UNICODE|re.IGNORECASE):
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/v7/query_translator.py'...
***   File "./lib/python3.5/site-packages/v7/query_translator.py", line 19
    for m in re.finditer(ur'(\$[#a-zа-я0-9\.^]+)\s+as\s+([a-zA-Z_0-9а-я]+)'
                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/v7/smb.py'...
***   File "./lib/python3.5/site-packages/v7/smb.py", line 7
    print smb.listdir('/')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/v7/utils.py'...
***   File "./lib/python3.5/site-packages/v7/utils.py", line 15
    r = r.replace(i, eval('u"\u%s"' % i[2:]))
                         ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/v7py-0.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
